# shinycapture

./: .Rbuildignore  .gitignore  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  cran-comments.md  mkdocs.yml  pyproject.toml
.github/workflows/: check.yml  lint.yml  publish.yml  test.yml
R/: capture.R  strategies.R  utils.R  zzz.R
docs/: api.md  index.md
examples/: capture_demo.R
examples/dash/: mpl_export.py
inst/: WORDLIST
inst/shinycapture/: shinycapture.js
man/: base64_decode.Rd  capture_element.Rd  capture_plotly.Rd  html2canvas_deps.Rd  html2canvas_strategy.Rd  plotly_strategy.Rd  shinycapture_deps.Rd
r-packages/shinycapture/: DESCRIPTION  NAMESPACE
r-packages/shinycapture/R/: capture.R  strategies.R  utils.R  zzz.R
r-packages/shinycapture/examples/: capture_demo.R
r-packages/shinycapture/inst/shinycapture/: shinycapture.js
r-packages/shinycapture/tests/testthat/: test-strategies.R  test-utils.R
src/dash_fn_interact/: __init__.py  _config_builder.py  _field_components.py  _forms.py  _interact.py  _page.py  _spec.py
src/s5ndt/: fig_export.py  mpl_export.py
tests/: test_smoke.py  testthat.R
tests/testthat/: test-capture.R  test-integration.R  test-strategies.R  test-utils.R
vignettes/: shinycapture.Rmd
